# rs_pa

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE.md  Makefile  README.md  TASKS.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.claude/commands/: execute-prompt.md  next-task.md  verify-quality.md  worktree-finish.md  worktree-merge.md  worktree-start.md
alembic/: env.py
alembic/versions/: 0b8b3cbbc9a1_initial_agent_model.py  21ed4e7453ef_add_reimbursement_agent_models.py
core/: settings.py
docs/: COMMANDS.md  ENVIRONMENT.md
docs/design/: DESIGN_FRAMEWORK.md  DESIGN_UI.md  TESTING.md
docs/design/agents/: DESIGN.md
docs/design/agents/reimbursement/: DESIGN.md
docs/standards/: PYTHON-STYLE-GUIDE.md
scripts/: populate_mock_data.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py
src/agents/reimbursement/: __init__.py  agent.py  ai_categorizer.py  graph.py  models.py  prompts.py
src/agents/reimbursement/reports/: __init__.py  aggregator.py  backend.py  exporter.py  formatter.py
src/agents/reimbursement/workflows/: __init__.py  batch_processing.py  report_generation.py  scheduled_scan.py
src/core/: __init__.py  agent_manager.py  database.py  gmail_label_manager.py  gmail_service.py  langsmith_monitor.py  llm_cache.py  llm_manager.py  logging.py  performance_monitor.py  task_scheduler.py
src/models/: __init__.py  agent.py  base.py
src/ui/: __init__.py  main_window.py
src/ui/controllers/: __init__.py
src/ui/dialogs/: __init__.py  category_dialog.py  expense_detail_dialog.py  report_dialog.py  schedule_dialog.py  settings_dialog.py
src/ui/models/: __init__.py  agent_table_model.py  reimbursement_results_model.py
src/ui/views/: __init__.py  dashboard_view.py  reimbursement_view.py
src/ui/widgets/: __init__.py  activity_timeline_widget.py  batch_progress.py  connection_status_widget.py  log_viewer_widget.py  metrics_panel_widget.py  progress_widget.py  status_indicator_widget.py  system_tray_widget.py  workflow_designer.py
tests/: __init__.py  test_basic.py
tests/integration/: __init__.py
tests/ui/: __init__.py
tests/unit/: __init__.py  test_agent_table_model.py  test_data_models.py  test_formatting.py  test_status_widget.py
